# clvi.cc

./: .gitignore  Makefile  README.md  buildspec.yml  index.html
Clean Ascension/: NakamaClient.gd
Clean Ascension/assets/materials/: player_unlit.shader
Clean Ascension/game/scenes/ui/: DebugHUD.tscn  Screen_Login.tscn  UIViewport.tscn
Clean Ascension/game/scenes/world/: PlayerCreation.tscn
Clean Ascension/game/src/app/: SceneRouter.gd
Clean Ascension/game/src/ui/: DebugHUD.gd
Clean Ascension/game/src/ui/screens/: LoginPresenter.gd
Clean Ascension/game/src/world/player/: DollyController.gd
backend/: index.js  package-lock.json  package.json
docs/: godot-client.md
game/Clean-Ascension/: project.godot
godot/: Main.gd  SortingLogic.gd
server/: Cargo.toml  Dockerfile  README.md
server/migrations/: 001_create_players.sql  002_create_litter_types.sql  003_create_inventories.sql  004_create_transactions.sql  005_create_guardian_tokens.sql  006_add_email_to_players.sql  007_create_refresh_tokens.sql
server/src/: auth.rs  config.rs  errors.rs  main.rs  middleware.rs  models.rs  state.rs
server/src/routes/: action.rs  mod.rs  player.rs  remediation.rs
web/: index.js
web/migrations/: 0001_init.sql
